# openCeFaDB

./: .gitignore  CITATION.cff  README.md  codemeta.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
_depr/: cli_old.py  test_database.py
_depr/examples/: plot_fan_curve.py
docs/: index.html
examples/: ontologies.ipynb
examples/depr/: plot_fan_curve.py  ssno.jsonld
notebooks/: 01-quick-start.ipynb  02-get-fan-data.ipynb  03-work-with-operation-points.ipynb  04-comparison-with-cfd.ipynb
opencefadb/: __init__.py  _database_initialization.py  cli.py  cli_old.py  configuration.py  core.py  db-dataset-config-bak.jsonld  db-dataset-config-sandbox-base.ttl  db-dataset-config-sandbox.ttl  db-dataset-config.jsonld  db-dataset-config.ttl  dbinit.py  entities.py  opencefadb-config-sandbox.ttl  paths.py  plotting.py  utils.py
opencefadb/_core/: _database_initialization.py
opencefadb/analysis/: plotting.py
opencefadb/app/: app.py
opencefadb/cad/: plotting.py
opencefadb/data/: graphdb-config.ttl  opencefadb-config-sandbox.ttl
opencefadb/database/: core.py  dbinit.py
opencefadb/database/stores/filedb/: hdf5sqldb.py
opencefadb/database/stores/rdf_stores/graphdb/: repository.py  store.py
opencefadb/database/stores/rdf_stores/rdffiledb/: rdffilestore.py
opencefadb/models/: __init__.py  _data.py  fan_curve.py  operating_point.py  sosa.py  utils.py  wikidata.py
opencefadb/postprocessing/: dimensionless_operation_point.py
opencefadb/query_templates/: sparql.py
opencefadb/shacl/: templates.py
opencefadb/sparql_templates/: __init__.py  fan.py  hdf.py
opencefadb/stores/: __init__.py
opencefadb/stores/filedb/: database_resource.py  hdf5filedb.py  hdf5sqldb.py
opencefadb/stores/rdf_stores/: _abstracts.py  graphdb.py
opencefadb/stores/rdf_stores/graphdb/: __init__.py  administration.py  connection.py  query.py  request_utils.py  store.py  url.py
opencefadb/stores/rdf_stores/rdffiledb/: rdffilestore.py
opencefadb/validation/: __init__.py
opencefadb/validation/shacl/: __init__.py
opencefadb/validation/shacl/templates/: dcat.py  hdf.py  m4i.py  person.py  qudt.py  sensor.py
opencefadb/zenodo/: search.py
prod/: graphdb_and_sql.py
tests/: graphdb-config-sandbox.ttl  test-repo-config.ttl  test_database.py  test_fan_curve.py  test_file_validation.py  test_hdf_file_validation.py  test_init_database.py  test_models.py  test_plotting.py  test_shacl_validation.py  test_sql_graphdb_database.py  test_stores.py  test_version.py
