[metadata]
name = opencefadb
version = 1.0.0
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = Python interface to the Open Centrifugal Fan Database (OpenCeFaDB).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/openCeFaDB
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find:
python_requires = >=3.8,<3.11
include_package_data = True
install_requires =
    gldb>=1.2.0
    appdirs
    click
    rdflib
    requests
    h5rdmtoolbox>=1.7.3
    ssnolib>=1.4.0.0
    tqdm

[options.extras_require]
test =
    pytest
    pytest-cov
complete =
    %(test)s

[tool:pytest]
python_files = test_*.py
testpaths = tests

[coverage:paths]
source =
    tests

[options.package_data]
opencefadb =
    db-dataset-config.jsonld
    data/graphdb-config.ttl


[options.entry_points]
console_scripts =
    opencefadb = opencefadb.cli:cli
