[metadata]
name = opencefadb
version = 1.0.0
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = Python interface to the Open Centrifugal Fan Database (OpenCeFaDB).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/openCeFaDB
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find:
python_requires = >3.8,<3.14
include_package_data = True
install_requires =
    appdirs
    click
    rdflib
    requests
    gldb==2.1.1
    ontolutils>=0.25.1,<1.0.0
    h5rdmtoolbox>=2.5.3,<=3.0.0
    ssnolib>=2.2.0.2,<=3.0.0.0
    tqdm
    rdflib-endpoint[cli]
    python-dotenv

[options.extras_require]
test =
    pytest
    pytest-cov
complete =
    %(test)s

[tool:pytest]
python_files = test_*.py
testpaths = tests

[coverage:paths]
source =
    tests

[options.package_data]
opencefadb =
    db-dataset-config.jsonld
    data/graphdb-config.ttl
    data/opencefadb-config-sandbox

[options.entry_points]
console_scripts =
    opencefadb = opencefadb.cli:main
